--- a/res/values-mk/strings.xml
+++ b/res/values-mk/strings.xml
@@ -920,7 +920,7 @@
     <string name="art_verifier_for_debuggable_title" msgid="1926445785190030479">"Потврдете го bytecode на апликациите"</string>
     <string name="art_verifier_for_debuggable_summary" msgid="4802875841862652879">"Дозволете ART да го потврди bytecode за апликациите со грешки за отстранување"</string>
     <string name="show_refresh_rate" msgid="5742688821872354973">"Прикажи стапка на освежување"</string>
-    <string name="show_refresh_rate_summary" msgid="3558118122374609663">"Прикажи стапка на освежување на тековниот екран"</string>
+    <string name="show_refresh_rate_summary" msgid="3558118122374609663">"Прикажи ја тековната стапка на освежување на екранот"</string>
     <string name="nfc_quick_toggle_title" msgid="3607620705230351666">"NFC"</string>
     <string name="nfc_quick_toggle_summary" product="tablet" msgid="3622326550467939809">"Овозможи размена на податоци кога таблетот ќе допре уред со NFC"</string>
     <string name="nfc_quick_toggle_summary" product="default" msgid="1460871052409162980">"Овозможи размена на податоци кога телефонот ќе допре уред со NFC"</string>
@@ -2815,7 +2815,7 @@
     <string name="battery_detail_since_full_charge" msgid="5650946565524184582">"Детали по последното целосно полнење"</string>
     <string name="battery_last_full_charge" msgid="8308424441475063956">"Последно целосно полнење"</string>
     <string name="battery_full_charge_last" msgid="465146408601016923">"Целосното полнење трае околу"</string>
-    <string name="battery_footer_summary" msgid="8221691063048377342">"Податоците за батеријата се приближни и може да се менуваат зависно од користењето."</string>
+    <string name="battery_footer_summary" msgid="8221691063048377342">"Податоците за користењето на батеријата се приближни и може да се менуваат зависно од користењето."</string>
     <string name="battery_detail_foreground" msgid="3312280147931093967">"Во активна употреба"</string>
     <string name="battery_detail_background" msgid="3333915023706228000">"Употреба во заднина"</string>
     <string name="battery_detail_power_usage" msgid="1492926471397355477">"Користење на батеријата"</string>
@@ -2857,7 +2857,7 @@
     <string name="battery_saver_auto_routine" msgid="4656495097900848608">"Според вашата рутина"</string>
     <string name="battery_saver_pref_auto_routine_summary" msgid="4739240095966241508">"Ќе се вклучи според рутината"</string>
     <string name="battery_saver_auto_percentage" msgid="558533724806281980">"Според проценти"</string>
-    <string name="battery_saver_auto_routine_summary" msgid="3913145448299472628">"Штедачот на батерија се вклучува ако е веројатно дека батеријата ќе се испразни пред следното вообичаено време на полнење"</string>
+    <string name="battery_saver_auto_routine_summary" msgid="3913145448299472628">"„Штедачот на батерија“ се вклучува ако е веројатно дека батеријата ќе се испразни пред следното вообичаено време на полнење"</string>
     <string name="battery_saver_auto_percentage_summary" msgid="6190884450723824287">"Ќе се вклучи на <xliff:g id="PERCENT">%1$s</xliff:g>"</string>
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"Поставете распоред"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"Продолжете го траењето на батеријата"</string>
@@ -2868,14 +2868,14 @@
     <!-- no translation found for battery_saver_seekbar_title (3712266470054006641) -->
     <skip />
     <string name="battery_saver_seekbar_title_placeholder" msgid="7141264642540687540">"Вклучи"</string>
-    <string name="battery_saver_master_switch_title" msgid="3474312070095834915">"Користи го штедачот на батерија"</string>
+    <string name="battery_saver_master_switch_title" msgid="3474312070095834915">"Користи „Штедач на батерија“"</string>
     <string name="battery_saver_turn_on_automatically_title" msgid="7857393318205740864">"Вклучи автоматски"</string>
     <string name="battery_saver_turn_on_automatically_never" msgid="6194649389871448663">"Никогаш"</string>
     <string name="battery_saver_turn_on_automatically_pct" msgid="4294335680892392449">"при <xliff:g id="PERCENT">%1$s</xliff:g> батерија"</string>
     <string name="battery_percentage" msgid="1779934245963043490">"Процент на батеријата"</string>
     <string name="battery_percentage_description" msgid="2321465139126125541">"Прикажувај процент на батеријата во статусната лента"</string>
     <string name="battery_usage_chart_graph_hint" msgid="9182079098173323005">"Ниво на батеријата во минатите 24 часа"</string>
-    <string name="battery_app_usage_for_past_24" msgid="1234770810563940656">"Користење на апликацијата во минатите 24 часа"</string>
+    <string name="battery_app_usage_for_past_24" msgid="1234770810563940656">"Користење од апликациите во минатите 24 часа"</string>
     <string name="battery_system_usage_for_past_24" msgid="3341520273114616263">"Користење на системот во минатите 24 часа"</string>
     <string name="battery_system_usage_for" msgid="3248552137819897140">"Користење на системот за <xliff:g id="SLOT">%s</xliff:g>"</string>
     <string name="battery_app_usage_for" msgid="7309909074935858949">"Користење на апликацијата за <xliff:g id="SLOT">%s</xliff:g>"</string>
@@ -2885,7 +2885,7 @@
     <string name="battery_usage_background_less_than_one_minute" msgid="3957971442554437909">"Заднина: помалку од една минута"</string>
     <string name="battery_usage_for_total_time" msgid="8402254046930910905">"Вкупно: <xliff:g id="TIME">%s</xliff:g>"</string>
     <string name="battery_usage_for_background_time" msgid="9109637210617095188">"Заднина: <xliff:g id="TIME">%s</xliff:g>"</string>
-    <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Податоците за батеријата се приближни и не го мерат користењето кога телефонот се полни"</string>
+    <string name="battery_usage_screen_footer" msgid="7899907241146636817">"Податоците за користењето на батеријата се приближни и не го мерат користењето кога телефонот се полни"</string>
     <string name="battery_usage_screen_footer_empty" msgid="115806339713068930">"Податоците за користењето на батеријата ќе бидат достапни откако ќе го користите телефонот неколку часа"</string>
     <string name="battery_usage_chart" msgid="4114747521432440017">"Графикон за користење на батеријата"</string>
     <string name="process_stats_summary_title" msgid="502683176231281732">"Статистика на процес"</string>
@@ -3709,7 +3709,7 @@
     <string name="zen_mode_duration_summary_forever" msgid="5551992961329998606">"Додека не го исклучите"</string>
     <string name="zen_mode_duration_summary_time_hours" msgid="2602655749780428308">"{count,plural, =1{1 час}one{# час}other{# часа}}"</string>
     <string name="zen_mode_duration_summary_time_minutes" msgid="5755536844016835693">"{count,plural, =1{1 минута}one{# минута}other{# минути}}"</string>
-    <string name="zen_mode_sound_summary_off" msgid="7350437977839985836">"{count,plural, =0{Исклучено}=1{Исклучено / 1 распоред може да се вклучи автоматски}one{Исклучено / # распоред може да се вклучи автоматски}other{Исклучено / # распореди може да се вклучат автоматски}}"</string>
+    <string name="zen_mode_sound_summary_off" msgid="7350437977839985836">"{count,plural, =0{Исклучено}=1{Исклучено/1 распоред може да се вклучи автоматски}one{Исклучено/# распоред може да се вклучат автоматски}other{Исклучено/# распореди може да се вклучат автоматски}}"</string>
     <string name="zen_category_behavior" msgid="3214056473947178507">"Што може да го прекинува „Не вознемирувај“"</string>
     <string name="zen_category_people" msgid="8252926021894933047">"Луѓе"</string>
     <string name="zen_category_apps" msgid="1167374545618451925">"Апликации"</string>
@@ -3752,7 +3752,7 @@
     <string name="recent_notifications" msgid="1105631022180160436">"Неодамна испратени"</string>
     <string name="recent_notifications_see_all_title" msgid="3087299996651692987">"Преглед на сите од минатите 7 дена"</string>
     <string name="general_notification_header" msgid="3669031068980713359">"Управувајте"</string>
-    <string name="app_notification_field" msgid="3858667320444612716">"Поставки за апликацијата"</string>
+    <string name="app_notification_field" msgid="3858667320444612716">"Поставки за апликации"</string>
     <string name="app_notification_field_summary" msgid="5981393613897713471">"Контролирајте ги известувањата од поединечни апликации"</string>
     <string name="advanced_section_header" msgid="6478709678084326738">"Општи"</string>
     <string name="profile_section_header" msgid="4970209372372610799">"Известувања од работен профил"</string>
@@ -4439,7 +4439,7 @@
     <string name="usb_summary_tether_power" msgid="4853034392919904792">"Интернет преку USB и полнење уред"</string>
     <string name="usb_summary_photo_transfers_power" msgid="9077173567697482239">"PTP и полнење уред"</string>
     <string name="usb_summary_MIDI_power" msgid="1184681982025435815">"MIDI и полнење уред"</string>
-    <string name="background_check_pref" msgid="5304564658578987535">"Проверка на заднината"</string>
+    <string name="background_check_pref" msgid="5304564658578987535">"Проверка во заднина"</string>
     <string name="background_check_title" msgid="225170874283229686">"Целосен пристап до заднината"</string>
     <string name="assist_access_context_title" msgid="5201495523514096201">"Користи го текстот од екранот"</string>
     <string name="assist_access_context_summary" msgid="6951814413185646275">"Дозволи апликацијата за помош да пристапи до содржините на екранот како текст"</string>
@@ -4552,7 +4552,7 @@
     <string name="display_summary" msgid="5526061030874717172">"Стави го во режим на мирување по <xliff:g id="TIMEOUT_DESCRIPTION">%1$s</xliff:g> неактивност"</string>
     <string name="display_dashboard_summary" msgid="1599453894989339454">"Темна тема, големина на фонт, осветленост"</string>
     <string name="display_summary_example" msgid="4275121979039344438">"Стави го во режим на мирување по 10 минути неактивност"</string>
-    <string name="memory_summary" msgid="8221954450951651735">"Искористени се просечно <xliff:g id="USED_MEMORY">%1$s</xliff:g> од <xliff:g id="TOTAL_MEMORY">%2$s</xliff:g> меморија"</string>
+    <string name="memory_summary" msgid="8221954450951651735">"Искористена меморија: просечно <xliff:g id="USED_MEMORY">%1$s</xliff:g> од <xliff:g id="TOTAL_MEMORY">%2$s</xliff:g>"</string>
     <string name="users_summary" msgid="8473589474976307510">"Најавени сте како <xliff:g id="USER_NAME">%1$s</xliff:g>"</string>
     <string name="payment_summary" msgid="5513009140568552693">"<xliff:g id="APP_NAME">%1$s</xliff:g> е стандардна"</string>
     <string name="backup_disabled" msgid="4503062265560959320">"Бекапот е оневозможен"</string>
