--- a/res/values-ne/strings.xml
+++ b/res/values-ne/strings.xml
@@ -975,7 +975,7 @@
     <string name="wifi_cellular_data_fallback_summary" msgid="7039944853033554386">"Wi-Fi मार्फत इन्टरनेट उपलब्ध नभएको बेलामा मोबाइल डेटाको खपत गर्नुहोस्। डेटा प्रयोगको शुल्क लाग्न सक्छ।"</string>
     <string name="wifi_add_network" msgid="4178564862173751181">"नेटवर्क हाल्नुहोस्"</string>
     <string name="wifi_configure_settings_preference_title" msgid="2536725796700696566">"Wi‑Fi का प्राथमिकताहरू"</string>
-    <string name="wifi_configure_settings_preference_summary_wakeup_on" msgid="7822368955551467382">"Wi‑Fi स्वत: पुन: सक्रिय हुन्छ"</string>
+    <string name="wifi_configure_settings_preference_summary_wakeup_on" msgid="7822368955551467382">"Wi‑Fi फेरि अन हुन्छ"</string>
     <string name="wifi_configure_settings_preference_summary_wakeup_off" msgid="5710203586018223864">"Wi‑Fi स्वत: पुनः सक्रिय हुँदैन"</string>
     <string name="wifi_access_points" msgid="5846755709207101844">"Wi-Fi नेटवर्कहरू"</string>
     <string name="wifi_menu_more_options" msgid="1236651929987819716">"थप विकल्पहरू"</string>
@@ -2323,14 +2323,14 @@
     <string name="accessibility_tutorial_dialog_title_gesture_settings" msgid="8485448068531147828">"पहुँचसम्बन्धी नयाँ इसारा प्रयोग गर्नुहोस्"</string>
     <string name="accessibility_tutorial_dialog_message_button" msgid="7002398857479782303">"यो सुविधा प्रयोग गर्न आफ्नो स्क्रिनको पुछारमा रहेको पहुँचसम्बन्धी बटन <xliff:g id="ACCESSIBILITY_ICON">%s</xliff:g> मा ट्याप गर्नुहोस्।\n\n एउटा सुविधाबाट अर्को सुविधामा जान पहुँचसम्बन्धी बटनमा थिचिराख्नुहोस्।"</string>
     <string name="accessibility_tutorial_dialog_message_floating_button" msgid="2551777208185138391">"यो सुविधा प्रयोग गर्न स्क्रिनमा भएको एक्सेसिबिलिटी बटनमा ट्याप गर्नुहोस्।"</string>
-    <string name="accessibility_tutorial_dialog_message_volume" msgid="5033080515460519183">"यो सुविधा प्रयोग गर्न दुवै भोल्युम कुञ्जी थिचिराख्नुहोस्।"</string>
+    <string name="accessibility_tutorial_dialog_message_volume" msgid="5033080515460519183">"यो सुविधा प्रयोग गर्न दुवै भोल्युम की थिचिराख्नुहोस्।"</string>
     <string name="accessibility_tutorial_dialog_message_triple" msgid="5219991116201165146">"म्याग्निफिकेसन सुविधा सक्रिय गर्न तथा निष्क्रिय पार्न आफ्नो स्क्रिनमा कतै तीन पटक ट्याप गर्नुहोस्।"</string>
     <string name="accessibility_tutorial_dialog_message_gesture" msgid="4148062210755434854">"यो सुविधा प्रयोग गर्न २ वटा औँलाले स्क्रिनको पुछारबाट माथितिर स्वाइप गर्नुहोस्।\n\nएउटा सुविधाबाट अर्को सुविधामा जान २ वटा औँलाले माथितिर स्वाइप गरी स्क्रिनमा थिचिराख्नुहोस्।"</string>
     <string name="accessibility_tutorial_dialog_message_gesture_talkback" msgid="8142847782708562793">"यो सुविधा प्रयोग गर्न ३ वटा औँलाले स्क्रिनको पुछारबाट माथितिर स्वाइप गर्नुहोस्।\n\nएउटा सुविधाबाट अर्को सुविधामा जान ३ वटा औँलाले माथितिर स्वाइप गरी स्क्रिनमा थिचिराख्नुहोस्।"</string>
     <string name="accessibility_tutorial_dialog_message_gesture_settings" msgid="40769674586981429">"पहुँचसम्बन्धी कुनै सुविधा प्रयोग गर्न २ वटा औँलाले स्क्रिनको पुछारबाट माथितिर स्वाइप गर्नुहोस्।\n\nएउटा सुविधाबाट अर्को सुविधामा जान २ वटा औँलाले माथितिर स्वाइप गरी स्क्रिनमा थिचिराख्नुहोस्।"</string>
     <string name="accessibility_tutorial_dialog_message_gesture_settings_talkback" msgid="7292969929578621958">"पहुँचसम्बन्धी कुनै सुविधा प्रयोग गर्न ३ वटा औँलाले स्क्रिनको पुछारबाट माथितिर स्वाइप गर्नुहोस्।\n\nएउटा सुविधाबाट अर्को सुविधामा जान ३ वटा औँलाले माथितिर स्वाइप गरी स्क्रिनमा थिचिराख्नुहोस्।"</string>
     <string name="accessibility_tutorial_dialog_button" msgid="2031773187678948436">"बुझेँ"</string>
-    <string name="accessibility_shortcut_title" msgid="8125867833704517463">"<xliff:g id="SERVICE">%1$s</xliff:g>सम्बन्धी सर्टकट"</string>
+    <string name="accessibility_shortcut_title" msgid="8125867833704517463">"<xliff:g id="SERVICE">%1$s</xliff:g> सम्बन्धी सर्टकट"</string>
     <string name="accessibility_shortcut_edit_summary_software" msgid="6405629977940618205">"एक्सेसिबिलिटी बटन"</string>
     <string name="accessibility_shortcut_edit_summary_software_gesture" msgid="5489284264414421286">"एक्सेसिबिलिटी जेस्चर"</string>
     <string name="accessibility_shortcut_edit_dialog_title_software_gesture" msgid="8078659880723370597">"२ वटा औँलाले माथितिर स्वाइप गर्नुहोस्"</string>
@@ -2412,7 +2412,7 @@
     <string name="accessibility_touch_vibration_title" msgid="533931451319110741">"टच गर्दाको भाइब्रेसन"</string>
     <string name="accessibility_service_primary_switch_title" msgid="437610853412159406">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> प्रयोग गर्नुहोस्"</string>
     <string name="accessibility_service_primary_open_title" msgid="8655108684769091154">"<xliff:g id="ACCESSIBILITY_APP_NAME">%1$s</xliff:g> खोल्नुहोस्"</string>
-    <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"रङ्ग सच्याउने सुविधा प्रयोग गरियोस्"</string>
+    <string name="accessibility_daltonizer_primary_switch_title" msgid="32064721588910540">"कलर करेक्सन प्रयोग गरियोस्"</string>
     <string name="accessibility_caption_primary_switch_title" msgid="8901149325574757370">"क्याप्सन देखाइयोस्"</string>
     <string name="accessibility_caption_primary_switch_summary" msgid="2754071646412717674">"यो सुविधा चल्ने एपमा मात्र"</string>
     <string name="captioning_caption_appearance_title" msgid="4501313548541670063">"क्याप्सनको आकार र शैली"</string>
@@ -2526,8 +2526,8 @@
     <string name="enable_service_pattern_reason" msgid="6832846117817938536">"किनभने <xliff:g id="SERVICE">%1$s</xliff:g> सेवा प्रयोग गर्दा डेटा गुप्तिकरणमा असर गर्छ, तपाईंले आफ्नो प्याटर्न पुष्टि गर्न आवश्यक छ।"</string>
     <string name="enable_service_pin_reason" msgid="6040417014360237703">"किनभने <xliff:g id="SERVICE">%1$s</xliff:g> सेवा प्रयोग गर्दा डेटा गुप्तिकरणमा असर गर्छ, तपाईं आफ्नो PIN पुष्टि गर्न आवश्यक छ।"</string>
     <string name="enable_service_password_reason" msgid="6962544350351734238">"किनभने <xliff:g id="SERVICE">%1$s</xliff:g> सेबा प्रयोग गर्दा डेटा गुप्तिकरणमा असर गर्छ, तपाईं आफ्नो पासवर्ड पुष्टि गर्न आवश्यक छ।"</string>
-    <string name="accessibility_service_warning" msgid="6779187188736432618">"<xliff:g id="SERVICE">%1$s</xliff:g> ले यो डिभाइस पूर्ण रूपमा नियन्त्रण गर्ने अनुमति माग्दै छ। यो सेवाले स्क्रिनमा भएका जानकारी पढ्न तथा पहुँचसम्बन्धी आवश्यकता भएका प्रयोगकर्ताहरूका तर्फबाट कारबाही गर्न सक्छ। धेरैजसो अनुप्रयोगहरूका हकमा यो स्तरको नियन्त्रण उपयुक्त हुँदैन।"</string>
-    <string name="accessibility_service_warning_description" msgid="6573203795976134751">"तपाईंलाई पहुँच राख्न आवश्यक पर्ने कुरामा सहयोग गर्ने एपमाथि पूर्ण नियन्त्रण गर्नु उपयुक्त हुन्छ तर अधिकांश अनुप्रयोगहरूका हकमा यस्तो नियन्त्रण उपयुक्त हुँदैन।"</string>
+    <string name="accessibility_service_warning" msgid="6779187188736432618">"<xliff:g id="SERVICE">%1$s</xliff:g> ले यो डिभाइस पूर्ण रूपमा नियन्त्रण गर्ने अनुमति माग्दै छ। यो सेवाले स्क्रिनमा भएका जानकारी पढ्न तथा पहुँचसम्बन्धी आवश्यकता भएका प्रयोगकर्ताहरूका तर्फबाट कारबाही गर्न सक्छ। धेरैजसो एपका हकमा यो स्तरको नियन्त्रण उपयुक्त हुँदैन।"</string>
+    <string name="accessibility_service_warning_description" msgid="6573203795976134751">"तपाईंलाई पहुँच राख्न आवश्यक पर्ने कुरामा सहयोग गर्ने एपमाथि पूर्ण नियन्त्रण गर्नु उपयुक्त हुन्छ तर अधिकांश एपका हकमा यस्तो नियन्त्रण उपयुक्त हुँदैन।"</string>
     <string name="accessibility_service_screen_control_title" msgid="324795030658109870">"स्क्रिन हेर्नुहोस् र नियन्त्रण गर्नुहोस्"</string>
     <string name="accessibility_service_screen_control_description" msgid="8431940515157990426">"यसले स्क्रिनमा देखिने सबै सामग्री पढ्न सक्छ र अन्य एपहरूमा उक्त सामग्री देखाउन सक्छ।"</string>
     <string name="accessibility_service_action_perform_title" msgid="1449360056585337833">"कारबाहीहरू हेर्नुहोस् र तिनमा कार्य गर्नुहोस्"</string>
@@ -2536,7 +2536,7 @@
     <string name="accessibility_dialog_button_deny" msgid="2037249860078259284">"इन्कार गर्नु⋯"</string>
     <string name="accessibility_dialog_button_stop" msgid="7295448112784528196">"रोक्नुहोस्"</string>
     <string name="accessibility_dialog_button_cancel" msgid="4813234247237851121">"रद्द गर्नु⋯"</string>
-    <string name="disable_service_title" msgid="2909108731776956167">"<xliff:g id="SERVICE">%1$s</xliff:g>बन्द गर्नुहुन्छ?"</string>
+    <string name="disable_service_title" msgid="2909108731776956167">"<xliff:g id="SERVICE">%1$s</xliff:g> बन्द गर्ने हो?"</string>
     <string name="disable_service_message" msgid="4814173941688548016">"<xliff:g id="STOP">%1$s</xliff:g> मा ट्याप गर्नुले <xliff:g id="SERVICE">%2$s</xliff:g> सुविधा बन्द गर्ने छ।"</string>
     <string name="accessibility_no_services_installed" msgid="3725569493860028593">"कुनै पनि सेवाहरू स्थापित छैनन्"</string>
     <string name="accessibility_no_service_selected" msgid="1310596127128379897">"कुनै पनि सेवा चयन गरिएको छैन"</string>
@@ -3528,7 +3528,7 @@
     <string name="keywords_battery" msgid="7040323668283600530">"शक्ति उपयोग, चार्ज"</string>
     <string name="keywords_battery_usage" msgid="1763573071014260220">"ब्याट्रीको खपत हेर्नुहोस्, ब्याट्रीको खपत, उर्जाको खपत"</string>
     <string name="keywords_battery_saver" msgid="6289682844453234359">"ब्याट्री सेभर, पावर सेभर, सेभर"</string>
-    <string name="keywords_battery_adaptive_preferences" msgid="1774870663426502938">"एड्याप्टिभ चार्जिङ सुविधाका प्राथमिकताहरू, एड्याप्टिभ ब्याट्री"</string>
+    <string name="keywords_battery_adaptive_preferences" msgid="1774870663426502938">"एड्याप्टिभ प्राथमिकताहरू, एड्याप्टिभ ब्याट्री"</string>
     <string name="keywords_spell_checker" msgid="5148906820603481657">"हिज्जे, शब्दकोश, हिज्जे जाँच, स्वत: सच्याइ"</string>
     <string name="keywords_voice_input" msgid="7534900094659358971">"पहिचान गर्ने, इनपुट, बोली, अभिव्यक्त गर्नु, भाषा, ह्यान्ड्स्फ्री, ह्यान्ड फ्री, पहिचान, आक्रामक, शब्द, अडियो, इतिहास, ब्लुटुथ हेडसेट"</string>
     <string name="keywords_text_to_speech_output" msgid="6728080502619011668">"मूल्याङ्कन गर्नुहोस्, भाषा, डिफल्ट, बोल्नुहोस्, बोल्दै, tts, पहुँच, स्क्रिन रिडर, दृष्टिविहीन"</string>
@@ -5005,7 +5005,7 @@
     <string name="clear_instant_app_confirmation" msgid="3964731334459209482">"तपाईं यो तात्कालिक एपलाई हटाउन चाहनुहुन्छ?"</string>
     <string name="launch_instant_app" msgid="8503927414339606561">"खोल्नुहोस्"</string>
     <string name="game_storage_settings" msgid="2521393115726178837">"गेम"</string>
-    <string name="app_info_storage_title" msgid="4076977173803093808">"प्रयोग गरेको ठाउँ"</string>
+    <string name="app_info_storage_title" msgid="4076977173803093808">"प्रयोग गरेको भण्डारण"</string>
     <string name="webview_uninstalled_for_user" msgid="627352948986275488">"(प्रयोगकर्ता <xliff:g id="USER">%s</xliff:g> को लागि स्थापना रद्द गरियो)"</string>
     <string name="webview_disabled_for_user" msgid="5809886172032644498">"(प्रयोगकर्ता <xliff:g id="USER">%s</xliff:g> को लागि असक्षम पारियो)"</string>
     <string name="autofill_app" msgid="7595308061826307921">"अटोफिल सेवा"</string>
@@ -5050,8 +5050,8 @@
     <string name="angle_enabled_app_set" msgid="7811829383833353021">"कोण सक्षम पारिएको एप: <xliff:g id="APP_NAME">%1$s</xliff:g>"</string>
     <string name="graphics_driver_dashboard_title" msgid="5661084817492587796">"ग्राफिक्स ड्राइभरका प्राथमिकताहरू"</string>
     <string name="graphics_driver_dashboard_summary" msgid="6348759885315793654">"ग्राफिक्स ड्राइभरका सेटिङहरू परिमार्जन गर्नुहोस्"</string>
-    <string name="graphics_driver_footer_text" msgid="5123754522284046790">"एकभन्दा बढी ग्राफिक्स ड्राइभर रहेका अवस्थामा, तपाईं यस डिभाइसमा स्थापना गरिएका अनुप्रयोगहरूका हकमा अद्यावधिक गरिएको ग्राफिक्स ड्राइभर प्रयोग गर्ने विकल्प छनौट गर्न सक्नुहुन्छ।"</string>
-    <string name="graphics_driver_all_apps_preference_title" msgid="1343065382898127360">"सबै अनुप्रयोगहरूका हकमा सक्षम पार्नुहोस्"</string>
+    <string name="graphics_driver_footer_text" msgid="5123754522284046790">"एकभन्दा बढी ग्राफिक्स ड्राइभर रहेका अवस्थामा, तपाईं यस डिभाइसमा स्थापना गरिएका एपका हकमा अद्यावधिक गरिएको ग्राफिक्स ड्राइभर प्रयोग गर्ने विकल्प छनौट गर्न सक्नुहुन्छ।"</string>
+    <string name="graphics_driver_all_apps_preference_title" msgid="1343065382898127360">"सबै एपका हकमा सक्षम पार्नुहोस्"</string>
     <string name="graphics_driver_app_preference_title" msgid="3133255818657706857">"ग्राफिक्स ड्राइभर चयन गर्नुहोस्"</string>
     <string name="graphics_driver_app_preference_default" msgid="764432460281859855">"डिफल्ट"</string>
     <string name="graphics_driver_app_preference_production_driver" msgid="1515874802568434915">"गेम ड्राइभर"</string>
