--- a/res/values-sl/strings.xml
+++ b/res/values-sl/strings.xml
@@ -982,7 +982,7 @@
     <string name="wifi_sap_no_channel_error" msgid="2126487622024749402">"5-GHz pas ni na voljo v tej državi"</string>
     <string name="wifi_in_airplane_mode" msgid="1235412508135267981">"V načinu za letalo"</string>
     <string name="wifi_notify_open_networks" msgid="2610323626246818961">"Obvesti, če so na voljo javna omrežja"</string>
-    <string name="wifi_notify_open_networks_summary" msgid="191058832201741013">"Obvesti me, ko je na voljo zanesljivo javno omrežje"</string>
+    <string name="wifi_notify_open_networks_summary" msgid="191058832201741013">"Obvesti me, ko je na voljo zanesljivo javno omrežje."</string>
     <string name="wifi_wakeup" msgid="3834327315861781611">"Samodejno vklopi Wi‑Fi"</string>
     <string name="wifi_wakeup_summary" msgid="5778059083790221465">"Wi‑Fi se bo samodejno znova vklopil v bližini zanesljivih shranjenih omrežij, na primer vašega domačega omrežja."</string>
     <string name="wifi_wakeup_summary_no_location" msgid="681323616606485096">"Ni na voljo, ker je lokacija izklopljena. Vklopite "<annotation id="link">"lokacijo"</annotation>"."</string>
@@ -2363,7 +2363,7 @@
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"Povečava zaslona"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"Če želite povečati, se trikrat dotaknite"</string>
     <string name="accessibility_screen_magnification_navbar_short_summary" msgid="4885018322430052037">"Če želite povečati, se dotaknite gumba"</string>
-    <string name="accessibility_screen_magnification_summary" msgid="2527664482392097865">"Hitro povečanje prikaza na zaslonu za povečan prikaz vsebine.&lt;br/&gt;&lt;br/&gt; &lt;b&gt;Prikaz povečate tako:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Z bližnjico vklopite povečavo.&lt;br/&gt; {1,number,integer}. Dotaknite se zaslona.&lt;br/&gt; {2,number,integer}. Po zaslonu se pomikajte z vlečenjem dveh prstov.&lt;br/&gt; {3,number,integer}. Stopnjo povečave prilagodite tako, da prsta razmaknete ali primaknete.&lt;br/&gt; {4,number,integer}. Z bližnjico izklopite povečavo&lt;br/&gt;&lt;br/&gt; &lt;b&gt;Povečavo začasno povečate tako:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Z bližnjico vklopite povečavo.&lt;br/&gt; {1,number,integer}. Dotaknite se poljubne točke na zaslonu in jo pridržite.&lt;br/&gt; {2,number,integer}. Po zaslonu se pomikajte z vlečenjem prsta.&lt;br/&gt; {3,number,integer}. Dvignite prst, da izklopite povečavo."</string>
+    <string name="accessibility_screen_magnification_summary" msgid="2527664482392097865">"Hitro povečanje prikaza na zaslonu za povečan prikaz vsebine.&lt;br/&gt;&lt;br/&gt; &lt;b&gt;Prikaz povečate tako:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Z bližnjico vklopite povečavo.&lt;br/&gt; {1,number,integer}. Dotaknite se zaslona.&lt;br/&gt; {2,number,integer}. Po zaslonu se pomikajte z vlečenjem dveh prstov.&lt;br/&gt; {3,number,integer}. Stopnjo povečave prilagodite tako, da prsta razmaknete ali primaknete.&lt;br/&gt; {4,number,integer}. Z bližnjico izklopite povečavo&lt;br/&gt;&lt;br/&gt; &lt;b&gt;Povečavo začasno vklopite tako:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Z bližnjico vklopite povečavo.&lt;br/&gt; {1,number,integer}. Dotaknite se poljubne točke na zaslonu in jo pridržite.&lt;br/&gt; {2,number,integer}. Po zaslonu se pomikajte z vlečenjem prsta.&lt;br/&gt; {3,number,integer}. Dvignite prst, da izklopite povečavo."</string>
     <string name="accessibility_screen_magnification_navbar_summary" msgid="807985499898802296">"Ko je povečava vklopljena, lahko povečate prikaz na zaslonu.\n\n"<b>"Če želite povečati prikaz"</b>", zaženite povečavo, nato pa se dotaknite poljubnega mesta na zaslonu.\n"<ul><li>"Povlecite z dvema ali več prsti po zaslonu, če se želite pomikati."</li>\n<li>"Primaknite ali razmaknite dva ali več prstov, če želite prilagoditi povečavo."</li></ul>\n\n<b>"Če želite začasno povečati prikaz"</b>", zaženite povečavo ter se dotaknite poljubnega mesta na zaslonu in ga pridržite.\n"<ul><li>"Povlecite, če se želite premikati po zaslonu."</li>\n<li>"Dvignite prst, če želite zmanjšati povečavo."</li></ul>\n\n"Povečava ni mogoča na tipkovnici ali v vrstici za krmarjenje."</string>
     <string name="accessibility_tutorial_pager" msgid="8461939455728454061">"<xliff:g id="CURRENT_PAGE">%1$d</xliff:g>. stran od <xliff:g id="NUM_PAGES">%2$d</xliff:g>"</string>
     <string name="accessibility_tutorial_dialog_title_button" msgid="4681164949716215131">"Odpiranje z gumbom za ljudi s posebnimi potrebami"</string>
@@ -2499,9 +2499,9 @@
     <string name="daltonizer_mode_protanomaly_title" msgid="6787594316700223938">"Protanomalija"</string>
     <string name="daltonizer_mode_tritanomaly_title" msgid="1869867447813349033">"Tritanomalija"</string>
     <string name="daltonizer_mode_grayscale_title" msgid="152005391387952588">"Sivine"</string>
-    <string name="daltonizer_mode_deuteranomaly_summary" msgid="791173297742998942">"Rdeča – zelena"</string>
-    <string name="daltonizer_mode_protanomaly_summary" msgid="482834207025141433">"Rdeča – zelena"</string>
-    <string name="daltonizer_mode_tritanomaly_summary" msgid="2837137091067433059">"Modra – rumena"</string>
+    <string name="daltonizer_mode_deuteranomaly_summary" msgid="791173297742998942">"Rdeča-zelena"</string>
+    <string name="daltonizer_mode_protanomaly_summary" msgid="482834207025141433">"Rdeča-zelena"</string>
+    <string name="daltonizer_mode_tritanomaly_summary" msgid="2837137091067433059">"Modra-rumena"</string>
     <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"Zelo zatemnjeno"</string>
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Zaslon naj bo zelo zatemnjen"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Zatemnite zaslon telefona, da bo temnejši od najmanjše svetlosti."</string>
@@ -2597,7 +2597,7 @@
     <string name="accessibility_dialog_button_stop" msgid="7295448112784528196">"Ustavi"</string>
     <string name="accessibility_dialog_button_cancel" msgid="4813234247237851121">"Prekliči"</string>
     <string name="disable_service_title" msgid="2909108731776956167">"Želite izklopiti »<xliff:g id="SERVICE">%1$s</xliff:g>«?"</string>
-    <string name="disable_service_message" msgid="4814173941688548016">"Če se dotaknete možnosti »<xliff:g id="STOP">%1$s</xliff:g>«, se bo storitev »<xliff:g id="SERVICE">%2$s</xliff:g>« ustavila."</string>
+    <string name="disable_service_message" msgid="4814173941688548016">"Če se dotaknete možnosti »<xliff:g id="STOP">%1$s</xliff:g>«, se bo funkcija »<xliff:g id="SERVICE">%2$s</xliff:g>« ustavila."</string>
     <string name="accessibility_no_services_installed" msgid="3725569493860028593">"Nameščena ni nobena storitev"</string>
     <string name="accessibility_no_service_selected" msgid="1310596127128379897">"Nobena storitev ni izbrana"</string>
     <string name="accessibility_service_default_description" msgid="7801435825448138526">"Ni opisa."</string>
@@ -3799,7 +3799,7 @@
     <string name="zen_mode_duration_summary_forever" msgid="5551992961329998606">"Dokler ne izklopite"</string>
     <string name="zen_mode_duration_summary_time_hours" msgid="2602655749780428308">"{count,plural, =1{1 uro}one{# uro}two{# uri}few{# ure}other{# ur}}"</string>
     <string name="zen_mode_duration_summary_time_minutes" msgid="5755536844016835693">"{count,plural, =1{1 minuto}one{# minuto}two{# minuti}few{# minute}other{# minut}}"</string>
-    <string name="zen_mode_sound_summary_off" msgid="7350437977839985836">"{count,plural, =0{Izklopljeno}=1{Izklopljeno/1 razpored se lahko samodejno vklopi}one{Izklopljeno/# razpored se lahko samodejno vklopi}two{Izklopljeno/# razporeda se lahko samodejno vklopita}few{Izklopljeno/# razporedi se lahko samodejno vklopijo}other{Izklopljeno/# razporedov se lahko samodejno vklopi}}"</string>
+    <string name="zen_mode_sound_summary_off" msgid="7350437977839985836">"{count,plural, =0{Izklopljeno}=1{Izklopljeno/1 razpored se lahko samodejno vklopi.}one{Izklopljeno/# razpored se lahko samodejno vklopi.}two{Izklopljeno/# razporeda se lahko samodejno vklopita.}few{Izklopljeno/# razporedi se lahko samodejno vklopijo.}other{Izklopljeno/# razporedov se lahko samodejno vklopi.}}"</string>
     <string name="zen_category_behavior" msgid="3214056473947178507">"Kaj lahko preglasi način »Ne moti«"</string>
     <string name="zen_category_people" msgid="8252926021894933047">"Osebe"</string>
     <string name="zen_category_apps" msgid="1167374545618451925">"Aplikacije"</string>
@@ -5572,7 +5572,7 @@
     <string name="cards_passes_sentence" msgid="1866311782387946944">"Kartice in vstopnice"</string>
     <string name="cards_passes_lower" msgid="2429722007109957877">"kartice in vstopnice"</string>
     <string name="power_menu_setting_name" msgid="7291642927216934159">"Pridržanje gumba za vklop"</string>
-    <string name="power_menu_summary_long_press_for_assist_enabled" msgid="5322150755041458952">"Pridržanje za Pomočnika."</string>
+    <string name="power_menu_summary_long_press_for_assist_enabled" msgid="5322150755041458952">"Pridržanje za Pomočnika"</string>
     <string name="power_menu_summary_long_press_for_assist_disabled_with_power_menu" msgid="5165714995895517816">"Pridržanje za meni za vklop/izklop."</string>
     <string name="power_menu_summary_long_press_for_assist_disabled_no_action" msgid="2831598484771657432">"Pridržanje je onemogočeno."</string>
     <string name="lockscreen_privacy_not_secure" msgid="3251276389681975912">"Za uporabo najprej nastavite zaklepanje zaslona."</string>
@@ -5634,7 +5634,7 @@
     <string name="reset_internet_text" product="tablet" msgid="8797910368942544453">"S tem boste končali telefonski klic."</string>
     <string name="resetting_internet_text" msgid="6696779371800051806">"Ponastavljanje internetne povezave …"</string>
     <string name="fix_connectivity" msgid="2781433603228089501">"Odpravljanje težav s povezavo"</string>
-    <string name="networks_available" msgid="3299512933684383474">"Omrežja so na voljo."</string>
+    <string name="networks_available" msgid="3299512933684383474">"Omrežja so na voljo"</string>
     <string name="to_switch_networks_disconnect_ethernet" msgid="6615374552827587197">"Če želite preklopiti omrežje, prekinite ethernetno povezavo."</string>
     <string name="wifi_is_off" msgid="8308136482502734453">"Wi-Fi je izklopljen"</string>
     <string name="tap_a_network_to_connect" msgid="8044777400224037875">"Za vzpostavitev povezave se dotaknite omrežja."</string>
