--- a/res/values-zh-rTW/strings.xml
+++ b/res/values-zh-rTW/strings.xml
@@ -1817,7 +1817,7 @@
     <string name="bluetooth_tethering_off_subtext_config" msgid="6941934844527406581">"透過藍牙分享這個「<xliff:g id="DEVICE_NAME">%1$d</xliff:g>」的網際網路連線"</string>
     <string name="bluetooth_tethering_overflow_error" msgid="5292358672240161566">"最多只能有 <xliff:g id="MAXCONNECTION">%1$d</xliff:g> 個裝置共用網路。"</string>
     <string name="bluetooth_untether_blank" msgid="5087548945727762308">"將中斷 <xliff:g id="DEVICE_NAME">%1$s</xliff:g> 的網路共用。"</string>
-    <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"乙太網路網路共用"</string>
+    <string name="ethernet_tether_checkbox_text" msgid="959743110824197356">"乙太網路共用"</string>
     <string name="ethernet_tethering_subtext" product="default" msgid="5998100693350351694">"透過乙太網路分享手機的網際網路連線"</string>
     <string name="tethering_footer_info" msgid="6782375845587483281">"使用無線基地台和網路共用功能，透過你的行動數據連線提供網際網路給其他裝置。應用程式也可以建立無線基地台來和鄰近的裝置分享內容。"</string>
     <string name="tethering_footer_info_sta_ap_concurrency" msgid="2079039077487477676">"使用無線基地台和網路共用功能，讓其他裝置能夠透過你的 Wi-Fi 或行動數據連線連上網際網路。應用程式也可以建立無線基地台，以便與鄰近的裝置分享內容。"</string>
@@ -2395,7 +2395,7 @@
     <string name="accessibility_display_inversion_preference_title" msgid="5476133104746207952">"色彩反轉"</string>
     <string name="accessibility_display_inversion_switch_title" msgid="7458595722552743503">"使用色彩反轉"</string>
     <string name="accessibility_display_inversion_preference_subtitle" msgid="6955835010409034745">"色彩反轉可將明亮的螢幕畫面調暗。&lt;br/&gt;&lt;br/&gt; 注意：&lt;ol&gt; &lt;li&gt; 這項功能也會將深色畫面轉為淺色畫面。&lt;/li&gt; &lt;li&gt; 使用這項功能後，媒體和圖片中的色彩會有所不同。&lt;/li&gt; &lt;li&gt; 你可以使用深色主題顯示深色背景。深色主題僅適用於支援的應用程式，而色彩反轉適用於所有應用程式。&lt;/li&gt; &lt;/ol&gt;"</string>
-    <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"自動點擊 (停留時間)"</string>
+    <string name="accessibility_autoclick_preference_title" msgid="2703143361605555752">"自動點選 (停留時間)"</string>
     <string name="accessibility_autoclick_description" msgid="6827042379062255307">"你必須連接滑鼠才能使用自動點擊功能。你可以將滑鼠游標設為在停止移動一段時間後自動點擊。"</string>
     <string name="accessibility_autoclick_default_title" msgid="752429113115293087">"關閉"</string>
     <string name="accessibility_autoclick_short_title" msgid="7938302504358912984">"短"</string>
@@ -2539,7 +2539,7 @@
     <string name="accessibility_dialog_button_stop" msgid="7295448112784528196">"停止"</string>
     <string name="accessibility_dialog_button_cancel" msgid="4813234247237851121">"取消"</string>
     <string name="disable_service_title" msgid="2909108731776956167">"停止「<xliff:g id="SERVICE">%1$s</xliff:g>」？"</string>
-    <string name="disable_service_message" msgid="4814173941688548016">"輕觸 [<xliff:g id="STOP">%1$s</xliff:g>] 會讓「<xliff:g id="SERVICE">%2$s</xliff:g>」停止運作。"</string>
+    <string name="disable_service_message" msgid="4814173941688548016">"輕觸「<xliff:g id="STOP">%1$s</xliff:g>」會讓「<xliff:g id="SERVICE">%2$s</xliff:g>」停止運作。"</string>
     <string name="accessibility_no_services_installed" msgid="3725569493860028593">"未安裝任何服務"</string>
     <string name="accessibility_no_service_selected" msgid="1310596127128379897">"未選取任何服務"</string>
     <string name="accessibility_service_default_description" msgid="7801435825448138526">"未提供說明。"</string>
@@ -2858,7 +2858,7 @@
     <string name="battery_saver_pref_auto_routine_summary" msgid="4739240095966241508">"將依照你的日常安排開啟"</string>
     <string name="battery_saver_auto_percentage" msgid="558533724806281980">"根據電量百分比"</string>
     <string name="battery_saver_auto_routine_summary" msgid="3913145448299472628">"如果電池電量可能會在你下次的例行充電時間前耗盡，系統就會開啟「省電」模式"</string>
-    <string name="battery_saver_auto_percentage_summary" msgid="6190884450723824287">"將在電量為 <xliff:g id="PERCENT">%1$s</xliff:g> 時開啟"</string>
+    <string name="battery_saver_auto_percentage_summary" msgid="6190884450723824287">"將在電量剩 <xliff:g id="PERCENT">%1$s</xliff:g> 時開啟"</string>
     <string name="battery_saver_schedule_settings_title" msgid="3688019979950082237">"設定時間表"</string>
     <string name="battery_saver_turn_on_summary" msgid="1433919417587171160">"延長電池續航力"</string>
     <string name="battery_saver_sticky_title_new" msgid="5942813274115684599">"充電時關閉"</string>
@@ -3738,7 +3738,7 @@
     <string name="work_ringtone_title" msgid="4810802758746102589">"工作手機鈴聲"</string>
     <string name="work_notification_ringtone_title" msgid="2955312017013255515">"預設工作通知音效"</string>
     <string name="work_alarm_ringtone_title" msgid="3369293796769537392">"預設工作鬧鐘音效"</string>
-    <string name="work_sound_same_as_personal" msgid="1836913235401642334">"與個人設定檔相同"</string>
+    <string name="work_sound_same_as_personal" msgid="1836913235401642334">"與個人資料夾相同"</string>
     <string name="work_sync_dialog_title" msgid="7810248132303515469">"要使用個人資料夾音效嗎？"</string>
     <string name="work_sync_dialog_yes" msgid="5785488304957707534">"確認"</string>
     <string name="work_sync_dialog_message" msgid="5066178064994040223">"你的工作資料夾將使用與個人資料夾相同的音效"</string>
@@ -4697,7 +4697,7 @@
     <string name="suggestion_additional_fingerprints" msgid="4726777300101156208">"新增其他指紋"</string>
     <string name="suggestion_additional_fingerprints_summary" msgid="2825364645039666674">"使用其他指紋解鎖"</string>
     <string name="battery_saver_on_summary" msgid="4605146593966255848">"開啟"</string>
-    <string name="battery_saver_off_scheduled_summary" msgid="2193875981740829819">"將在電量為 <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> 時開啟"</string>
+    <string name="battery_saver_off_scheduled_summary" msgid="2193875981740829819">"將在電量剩 <xliff:g id="BATTERY_PERCENTAGE">%1$s</xliff:g> 時開啟"</string>
     <string name="battery_saver_off_summary" msgid="4411561435493109261">"關閉"</string>
     <string name="battery_saver_button_turn_on" msgid="2206239048232352476">"立即開啟"</string>
     <string name="battery_saver_button_turn_off" msgid="6371072408072481484">"立即關閉"</string>
