--- a/res/values-be/strings.xml
+++ b/res/values-be/strings.xml
@@ -3823,7 +3823,7 @@
     <string name="zen_onboarding_current_setting_summary" msgid="8864567406905990095">"(Бягучая налада)"</string>
     <string name="zen_onboarding_dnd_visual_disturbances_header" msgid="8639698336231314609">"Змяніць налады апавяшчэнняў у рэжыме \"Не турбаваць\"?"</string>
     <string name="sound_work_settings" msgid="752627453846309092">"Гукі працоўнага профілю"</string>
-    <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Выкар. гукі асабістага профілю"</string>
+    <string name="work_use_personal_sounds_title" msgid="7729428677919173609">"Выкарыстоўваць гукі асабістага профілю"</string>
     <string name="work_use_personal_sounds_summary" msgid="608061627969077231">"Выкарыстоўваць тыя самыя гукі, што і ў асабістым профілі"</string>
     <string name="work_ringtone_title" msgid="4810802758746102589">"Рынгтон тэлефона ў працоўным профілі"</string>
     <string name="work_notification_ringtone_title" msgid="2955312017013255515">"Стандартны гук апавяшчэння ў працоўным профілі"</string>
