--- a/res/values-ko/strings.xml
+++ b/res/values-ko/strings.xml
@@ -2296,11 +2296,11 @@
     <string name="accessibility_magnification_area_settings_message" msgid="8498648925928109462">"전체 화면, 특정 영역을 확대하거나 두 가지 옵션 간에 전환할 수 있습니다."</string>
     <string name="accessibility_magnification_area_settings_full_screen_summary" msgid="2728962784113713010">"전체 화면"</string>
     <string name="accessibility_magnification_area_settings_window_screen_summary" msgid="9191632962955877019">"부분 화면"</string>
-    <string name="accessibility_magnification_area_settings_all_summary" msgid="8107511976748799455">"전체 화면 및 부분 화면 간 전환"</string>
+    <string name="accessibility_magnification_area_settings_all_summary" msgid="8107511976748799455">"전체 화면 또는 부분 화면으로 전환"</string>
     <string name="accessibility_magnification_mode_dialog_title" msgid="9151027667059878578">"확대 방법 선택"</string>
     <string name="accessibility_magnification_mode_dialog_option_full_screen" msgid="4892487869954032029">"전체 화면 확대"</string>
     <string name="accessibility_magnification_mode_dialog_option_window" msgid="4492443201099153362">"화면 일부 확대"</string>
-    <string name="accessibility_magnification_mode_dialog_option_switch" msgid="561043521011229424">"전체 화면 및 부분 화면 간 전환"</string>
+    <string name="accessibility_magnification_mode_dialog_option_switch" msgid="561043521011229424">"전체 화면 또는 부분 화면으로 전환"</string>
     <string name="accessibility_magnification_area_settings_mode_switch_summary" msgid="2885238806099080966">"스위치 버튼을 탭하여 두 옵션 간 이동"</string>
     <string name="accessibility_magnification_switch_shortcut_title" msgid="3671432048806533079">"접근성 버튼으로 전환할까요?"</string>
     <string name="accessibility_magnification_switch_shortcut_message" msgid="7718653917415163833">"화면 일부를 확대하기 위해 세 번 탭하면 입력 및 기타 작업이 지연됩니다.\n\n접근성 버튼은 화면에서 다른 앱 위에 플로팅됩니다. 확대하려면 탭하세요."</string>
