--- a/res/values-pl/strings.xml
+++ b/res/values-pl/strings.xml
@@ -2328,7 +2328,7 @@
     <string name="accessibility_text_and_display_title" msgid="1398507755501334961">"Tekst i wyświetlanie"</string>
     <string name="accessibility_turn_screen_darker_title" msgid="5986223133285858349">"Przyciemnij ekran"</string>
     <string name="interaction_control_category_title" msgid="2696474616743882372">"Zarządzanie interakcjami"</string>
-    <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"Elementy sterujące kodem czasowym"</string>
+    <string name="accessibility_tap_assistance_title" msgid="1058913033421048284">"Ustawienia czasowe"</string>
     <string name="accessibility_system_controls_title" msgid="6403287349518987624">"Systemowe elementy sterujące"</string>
     <string name="user_installed_services_category_title" msgid="2639470729311439731">"Pobrane aplikacje"</string>
     <string name="experimental_category_title" msgid="898904396646344152">"Eksperymentalne"</string>
@@ -2361,7 +2361,7 @@
     <string name="accessibility_preference_magnification_summary" msgid="2875518904115896888">"Powiększenie na ekranie"</string>
     <string name="accessibility_screen_magnification_short_summary" msgid="2207048420669939150">"Kliknij trzy razy, by powiększyć"</string>
     <string name="accessibility_screen_magnification_navbar_short_summary" msgid="4885018322430052037">"Kliknij przycisk, by powiększyć"</string>
-    <string name="accessibility_screen_magnification_summary" msgid="2527664482392097865">"Szybkie powiększenie ekranu w celu zwiększenia rozmiaru treści.&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Aby powiększyć:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Włącz powiększenie skrótem.&lt;br/&gt; {1,number,integer}. Kliknij ekran&lt;br/&gt; {2,number,integer}. Aby przesuwać powiększony ekran, przeciągaj po nim 2 palcami&lt;br/&gt; {3,number,integer}. Aby regulować powiększenie, ściągaj i rozciągaj ekran 2 palcami&lt;br/&gt; {4,number,integer}. Wyłącz powiększenie skrótem.&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Aby powiększyć tymczasowo:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Włącz powiększenie skrótem.&lt;br/&gt; {1,number,integer}. Naciśnij i przytrzymaj dowolne miejsce na ekranie.&lt;br/&gt; {2,number,integer}. Aby przesuwać powiększony ekran, przeciągaj po nim palcem&lt;br/&gt; {3,number,integer}. Podnieś palec, aby wyłączyć powiększenie"</string>
+    <string name="accessibility_screen_magnification_summary" msgid="2527664482392097865">"Szybkie powiększenie ekranu w celu zwiększenia rozmiaru treści.&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Aby powiększyć:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Włącz powiększenie za pomocą skrótu&lt;br/&gt; {1,number,integer}. Kliknij ekran&lt;br/&gt; {2,number,integer}. Aby przesuwać powiększony ekran, przeciągaj po nim 2 palcami&lt;br/&gt; {3,number,integer}. Aby regulować powiększenie, ściągaj i rozciągaj ekran 2 palcami&lt;br/&gt; {4,number,integer}. Wyłącz powiększenie za pomocą skrótu&lt;br/&gt;&lt;br/&gt;&lt;b&gt;Aby powiększyć tymczasowo:&lt;/b&gt;&lt;br/&gt; {0,number,integer}. Włącz powiększenie za pomocą skrótu&lt;br/&gt; {1,number,integer}. Naciśnij i przytrzymaj dowolne miejsce na ekranie&lt;br/&gt; {2,number,integer}. Aby przesuwać powiększony ekran, przeciągaj po nim palcem&lt;br/&gt; {3,number,integer}. Podnieś palec, aby wyłączyć powiększenie"</string>
     <string name="accessibility_screen_magnification_navbar_summary" msgid="807985499898802296">"Gdy powiększenie jest włączone, możesz powiększać fragmenty ekranu.\n\n"<b>"Aby powiekszyć"</b>", uruchom powiększenie, a następnie kliknij dowolne miejsce na ekranie.\n"<ul><li>"Przeciągnij co najmniej dwoma palcami, by przewijać."</li>\n<li>"Ściągnij do siebie co najmniej dwa palce, by dostosować powiększenie."</li></ul>\n\n<b>"Aby powiększyć tymczasowo"</b>", uruchom powiększenie, a następnie naciśnij i przytrzymaj dowolne miejsce na ekranie.\n"<ul><li>"Przeciągaj palcem, by poruszać się po ekranie."</li>\n<li>"Unieś palec, by wyłączyć powiększenie."</li></ul>\n\n"Nie można powiększyć klawiatury ani paska nawigacji."</string>
     <string name="accessibility_tutorial_pager" msgid="8461939455728454061">"Strona <xliff:g id="CURRENT_PAGE">%1$d</xliff:g> z <xliff:g id="NUM_PAGES">%2$d</xliff:g>"</string>
     <string name="accessibility_tutorial_dialog_title_button" msgid="4681164949716215131">"Otwieraj przyciskiem ułatwień dostępu"</string>
@@ -2497,9 +2497,9 @@
     <string name="daltonizer_mode_protanomaly_title" msgid="6787594316700223938">"Protanomalia"</string>
     <string name="daltonizer_mode_tritanomaly_title" msgid="1869867447813349033">"Tritanomalia"</string>
     <string name="daltonizer_mode_grayscale_title" msgid="152005391387952588">"Tryb szarości"</string>
-    <string name="daltonizer_mode_deuteranomaly_summary" msgid="791173297742998942">"Czerwony-zielony"</string>
-    <string name="daltonizer_mode_protanomaly_summary" msgid="482834207025141433">"Czerwony-zielony"</string>
-    <string name="daltonizer_mode_tritanomaly_summary" msgid="2837137091067433059">"Niebieski-żółty"</string>
+    <string name="daltonizer_mode_deuteranomaly_summary" msgid="791173297742998942">"Czerwony–zielony"</string>
+    <string name="daltonizer_mode_protanomaly_summary" msgid="482834207025141433">"Czerwony–zielony"</string>
+    <string name="daltonizer_mode_tritanomaly_summary" msgid="2837137091067433059">"Niebieski–żółty"</string>
     <string name="reduce_bright_colors_preference_title" msgid="2249314004651574997">"Dodatkowe przyciemnienie"</string>
     <string name="reduce_bright_colors_switch_title" msgid="1751678397884065312">"Dodatkowo przyciemniaj ekran"</string>
     <string name="reduce_bright_colors_preference_summary" product="default" msgid="7878756844769221647">"Przyciemnij ekran bardziej niż przy minimalnej jasności telefonu"</string>
@@ -3022,8 +3022,8 @@
     <string name="vpn_settings_multiple_insecure_multiple_total" msgid="1706236062478680488">"Niezabezpieczone: <xliff:g id="VPN_COUNT">%d</xliff:g>"</string>
     <string name="adaptive_connectivity_title" msgid="7464959640138428192">"Łączność adaptacyjna"</string>
     <string name="adaptive_connectivity_summary" msgid="3648731530666326885">"Wydłuża czas pracy na baterii i poprawia wydajność urządzenia dzięki automatycznemu zarządzaniu połączeniami sieciowymi"</string>
-    <string name="adaptive_connectivity_switch_on" msgid="3653067561620745493">"Wł."</string>
-    <string name="adaptive_connectivity_switch_off" msgid="5076172560836115265">"Wył."</string>
+    <string name="adaptive_connectivity_switch_on" msgid="3653067561620745493">"Włączona"</string>
+    <string name="adaptive_connectivity_switch_off" msgid="5076172560836115265">"Wyłączona"</string>
     <string name="credentials_title" msgid="7535942196886123656">"Magazyn danych logowania"</string>
     <string name="credentials_install" msgid="3933218407598415827">"Zainstaluj certyfikat"</string>
     <string name="credentials_install_summary" product="nosdcard" msgid="6644116499934553975">"Zainstaluj certyfikaty z nośnika"</string>
@@ -3797,7 +3797,7 @@
     <string name="zen_mode_duration_summary_forever" msgid="5551992961329998606">"Dopóki nie wyłączysz"</string>
     <string name="zen_mode_duration_summary_time_hours" msgid="2602655749780428308">"{count,plural, =1{1 godzina}few{# godziny}many{# godzin}other{# godziny}}"</string>
     <string name="zen_mode_duration_summary_time_minutes" msgid="5755536844016835693">"{count,plural, =1{1 minuta}few{# minuty}many{# minut}other{# minuty}}"</string>
-    <string name="zen_mode_sound_summary_off" msgid="7350437977839985836">"{count,plural, =0{Wyłączono}=1{Wyłączono / 1 harmonogram może włączać się automatycznie}few{Wyłączono / # harmonogramy mogą włączać się automatycznie}many{Wyłączono / # harmonogramów może włączać się automatycznie}other{Wyłączono / # harmonogramu może włączać się automatycznie}}"</string>
+    <string name="zen_mode_sound_summary_off" msgid="7350437977839985836">"{count,plural, =0{Wyłączone}=1{Wyłączone / 1 harmonogram może włączać się automatycznie}few{Wyłączone / # harmonogramy mogą włączać się automatycznie}many{Wyłączone / # harmonogramów może włączać się automatycznie}other{Wyłączono / # harmonogramu może włączać się automatycznie}}"</string>
     <string name="zen_category_behavior" msgid="3214056473947178507">"Ignorowanie trybu Nie przeszkadzać"</string>
     <string name="zen_category_people" msgid="8252926021894933047">"Osoby"</string>
     <string name="zen_category_apps" msgid="1167374545618451925">"Aplikacje"</string>
@@ -3880,7 +3880,7 @@
     <string name="bubbles_feature_disabled_dialog_text" msgid="5275666953364031055">"Włączenie dymków w tej aplikacji spowoduje włączenie ich na urządzeniu.\n\nBędzie to miało wpływ na inne aplikacje lub rozmowy, które mogą wyświetlać się jako dymki."</string>
     <string name="bubbles_feature_disabled_button_approve" msgid="2042628067101419871">"Włącz"</string>
     <string name="bubbles_feature_disabled_button_cancel" msgid="8963409459448350600">"Anuluj"</string>
-    <string name="notifications_bubble_setting_on_summary" msgid="4641572377430901196">"Włączono / Rozmowy mogą wyświetlać się jako pływające ikony"</string>
+    <string name="notifications_bubble_setting_on_summary" msgid="4641572377430901196">"Włączone / Rozmowy mogą wyświetlać się jako pływające ikony"</string>
     <string name="notifications_bubble_setting_title" msgid="8287649393774855268">"Zezwalaj aplikacjom na wyświetlanie dymków"</string>
     <string name="notifications_bubble_setting_description" msgid="7336770088735025981">"Niektóre rozmowy będą wyświetlać się jako pływające ikony nad innymi aplikacjami"</string>
     <string name="bubble_app_setting_all" msgid="312524752846978277">"Wszystkie rozmowy wyświetlane jako dymki"</string>
