--- a/res/values-tl/strings.xml
+++ b/res/values-tl/strings.xml
@@ -47,7 +47,7 @@
     <string name="sdcard_unmount" product="default" msgid="8078570285871053815">"I-unmount ang SD card"</string>
     <string name="sdcard_format" product="nosdcard" msgid="3248760426252305366">"Burahin storage na USB"</string>
     <string name="sdcard_format" product="default" msgid="3676635435136326182">"Burahin ang SD card"</string>
-    <string name="preview_pager_content_description" msgid="3762247188224576303">"I-preview"</string>
+    <string name="preview_pager_content_description" msgid="3762247188224576303">"Preview"</string>
     <string name="preview_page_indicator_content_description" msgid="2790254666634885865">"Preview, page <xliff:g id="CURRENT_PAGE">%1$d</xliff:g> ng <xliff:g id="NUM_PAGES">%2$d</xliff:g>"</string>
     <string name="font_size_summary" msgid="1296835853522566260">"Gawing mas maliit o mas malaki ang text sa screen."</string>
     <string name="font_size_make_smaller_desc" msgid="4978038055549590140">"Paliitin"</string>
@@ -2872,7 +2872,7 @@
     <string name="battery_saver_turn_on_automatically_pct" msgid="4294335680892392449">"sa <xliff:g id="PERCENT">%1$s</xliff:g> baterya"</string>
     <string name="battery_percentage" msgid="1779934245963043490">"Porsyento ng baterya"</string>
     <string name="battery_percentage_description" msgid="2321465139126125541">"Ipakita ang porsyento ng baterya sa status bar"</string>
-    <string name="battery_usage_chart_graph_hint" msgid="9182079098173323005">"Antas ng baterya sa huling 24 na oras"</string>
+    <string name="battery_usage_chart_graph_hint" msgid="9182079098173323005">"Level ng baterya sa huling 24 na oras"</string>
     <string name="battery_app_usage_for_past_24" msgid="1234770810563940656">"Paggamit ng app sa huling 24 na oras"</string>
     <string name="battery_system_usage_for_past_24" msgid="3341520273114616263">"Paggamit ng system sa huling 24 na oras"</string>
     <string name="battery_system_usage_for" msgid="3248552137819897140">"Paggamit ng system sa <xliff:g id="SLOT">%s</xliff:g>"</string>
