--- a/res/values-ur/strings.xml
+++ b/res/values-ur/strings.xml
@@ -3870,7 +3870,7 @@
     <string name="important_bubble" msgid="7911698275408390846">"بلبلہ ترجیحی گفتگوئیں"</string>
     <string name="important_conversation_behavior_summary" msgid="1845064084071107732">"ترجیحی گفتگوئیں پُل ڈاؤن شیڈ کے اوپری حصے میں دکھائی دیتی ہیں۔ آپ انہیں بلبلہ اور \'ڈسٹرب نہ کریں\' مداخلت پر بھی سیٹ کر سکتے ہیں۔"</string>
     <string name="conversation_onboarding_title" msgid="5194559958353468484">"ترجیحی اور ترمیم شدہ گفتگوئیں یہاں ظاہر ہوں گی"</string>
-    <string name="conversation_onboarding_summary" msgid="2484845363368486941">"ایک بار جب آپ گفتگو کو بطور ترجیحی نشان زد کرتے ہیں یا گفتگوئیں میں کوئی دوسری تبدیلی کرتے ہیں، تو وہ یہاں ظاہر ہوں گے۔ \n\n گفتگو کی ترتیبات کو تبدیل کرنے کے ليے: \nپُل ڈاؤن شیڈ کھولنے کے ليے اسکرین کے اوپری حصے سے نیچے کی طرف سوائپ کریں پھر گفتگو کو ٹچ کریں اور دبائے رکھیں۔"</string>
+    <string name="conversation_onboarding_summary" msgid="2484845363368486941">"ایک بار جب آپ کسی گفتگو کو بطور ترجیحی نشان زد کرتے ہیں یا گفتگوؤں میں کوئی دوسری تبدیلی کرتے ہیں تو وہ یہاں ظاہر ہوں گی۔ \n\n گفتگو کی ترتیبات کو تبدیل کرنے کے ليے: \nپُل ڈاؤن شیڈ کھولنے کے ليے اسکرین کے اوپری حصے سے نیچے کی طرف سوائپ کریں پھر گفتگو کو ٹچ کریں اور دبائے رکھیں۔"</string>
     <string name="notification_importance_min" msgid="4609688642942787774">"بغیر آواز کے دکھائیں اور چھوٹا کریں"</string>
     <string name="notification_importance_low" msgid="7562535765919565273">"خاموشی سے دکھائیں"</string>
     <string name="notification_importance_default" msgid="7483906490369073043">"آواز نکالیں"</string>
@@ -4122,7 +4122,7 @@
     <string name="zen_mode_events_list" msgid="7191316245742097229">"ایونٹس"</string>
     <string name="zen_mode_events_list_first" msgid="7425369082835214361">"ایونٹس"</string>
     <string name="zen_mode_bypassing_apps" msgid="625309443389126481">"ایپس کو اوور رائیڈ کرنے کی اجازت دیں"</string>
-    <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"ایپس جو رکاوٹ ڈال سکتی ہیں"</string>
+    <string name="zen_mode_bypassing_apps_header" msgid="60083006963906906">"ایپس جو مداخلت کر سکتی ہیں"</string>
     <string name="zen_mode_bypassing_apps_add_header" msgid="3201829605075172536">"مزید ایپس منتخب کریں"</string>
     <string name="zen_mode_bypassing_apps_none" msgid="7944221631721778096">"کوئی ایپ منتخب نہیں ہے"</string>
     <string name="zen_mode_bypassing_apps_subtext_none" msgid="5128770411598722200">"کوئی ایپ رکاوٹ نہیں ڈال سکتی"</string>
@@ -4771,7 +4771,7 @@
     <string name="dark_theme_slice_subtitle" msgid="5555724345330434268">"بیٹری لائف بڑھانے میں مدد کرتی ہے"</string>
     <string name="quick_settings_developer_tiles" msgid="7336007844525766623">"فوری ترتیبات کے ڈویلپر ٹائلز"</string>
     <string name="adb_authorization_timeout_title" msgid="6996844506783749754">"‏adb اجازت دہندگی کے ٹائم آؤٹ کو غیر فعال کریں"</string>
-    <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"‏ان سسٹمز کے لیے adb کی اجازت دہندگیوں کی منسوخی کو خود کار طور پر غیر فعال کریں جو ڈیفالٹ (7 دن) یا صارف کے ترتیب کردہ (کم از کم1 دن) وقت کی تعداد کے اندر دوبارہ منسلک نہیں ہوئی۔"</string>
+    <string name="adb_authorization_timeout_summary" msgid="409931540424019778">"‏ان سسٹمز کے لیے adb کی اجازت دہندگیوں کی منسوخی کو خود کار طور پر غیر فعال کریں جو ڈیفالٹ (7 دن) یا صارف کے ترتیب کردہ (کم از کم 1 دن) وقت کی تعداد کے اندر دوبارہ منسلک نہیں ہوئی۔"</string>
     <string name="winscope_trace_quick_settings_title" msgid="4104768565053226689">"‏Winscope ٹریس"</string>
     <string name="sensors_off_quick_settings_title" msgid="8472151847125917167">"سینسرز آف ہیں"</string>
     <string name="managed_profile_settings_title" msgid="3400923723423564217">"دفتری پروفائل کی ترتیبات"</string>
