--- a/res/values-vi/strings.xml
+++ b/res/values-vi/strings.xml
@@ -1195,7 +1195,7 @@
     <string name="wifi_hotspot_auto_off_summary" msgid="8283656069997871354">"Khi không có thiết bị nào kết nối"</string>
     <string name="wifi_hotspot_maximize_compatibility" msgid="6494125684420024058">"Tăng cường khả năng tương thích"</string>
     <string name="wifi_hotspot_maximize_compatibility_single_ap_summary" msgid="383355687431591441">"Giúp các thiết bị khác tìm thấy điểm phát sóng này. Làm giảm tốc độ kết nối với điểm phát sóng."</string>
-    <string name="wifi_hotspot_maximize_compatibility_dual_ap_summary" msgid="3579549223159056533">"Giúp các thiết bị khác tìm thấy điểm phát sóng này. Làm tăng mức sử dụng pin."</string>
+    <string name="wifi_hotspot_maximize_compatibility_dual_ap_summary" msgid="3579549223159056533">"Giúp các thiết bị khác tìm thấy điểm phát sóng này. Tính năng này làm tăng mức sử dụng pin."</string>
     <string name="wifi_tether_starting" msgid="8879874184033857814">"Đang bật điểm phát sóng…"</string>
     <string name="wifi_tether_stopping" msgid="4416492968019409188">"Đang tắt điểm phát sóng…"</string>
     <string name="wifi_tether_enabled_subtext" msgid="5085002421099821056">"<xliff:g id="NETWORK_SSID">%1$s</xliff:g> đang hiện hoạt"</string>
@@ -1341,9 +1341,9 @@
     <string name="display_white_balance_title" msgid="2624544323029364713">"Cân bằng trắng của màn hình"</string>
     <string name="display_white_balance_summary" msgid="7625456704950209050"></string>
     <string name="peak_refresh_rate_title" msgid="1878771412897140903">"Hình ảnh mượt"</string>
-    <string name="peak_refresh_rate_summary" msgid="1527087897198455042">"Tự động tăng tốc độ làm mới từ 60 lên 90 Hz đối với một số nội dung. Làm tăng mức sử dụng pin."</string>
+    <string name="peak_refresh_rate_summary" msgid="1527087897198455042">"Tự động tăng tốc độ làm mới từ 60 lên 90 Hz đối với một số nội dung. Tính năng này làm tăng mức sử dụng pin."</string>
     <string name="force_high_refresh_rate_toggle" msgid="3325789621928312050">"Buộc chuyển sang tốc độ làm mới cao nhất"</string>
-    <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"Tốc độ làm mới cao nhất giúp cải thiện khả năng phản hồi khi chạm và chất lượng ảnh động. Làm tăng mức sử dụng pin."</string>
+    <string name="force_high_refresh_rate_desc" msgid="7794566420873814875">"Tốc độ làm mới cao nhất giúp cải thiện khả năng phản hồi khi chạm và chất lượng ảnh động. Tính năng này làm tăng mức sử dụng pin."</string>
     <string name="adaptive_sleep_title" msgid="2987961991423539233">"Chú ý đến màn hình"</string>
     <string name="adaptive_sleep_summary_on" msgid="313187971631243800">"Bật / Màn hình sẽ không tắt nếu bạn đang nhìn vào màn hình"</string>
     <string name="adaptive_sleep_summary_off" msgid="5272156339202897523">"Tắt"</string>
@@ -2400,7 +2400,7 @@
     <string name="accessibility_autoclick_default_title" msgid="752429113115293087">"Tắt"</string>
     <string name="accessibility_autoclick_short_title" msgid="7938302504358912984">"Ngắn"</string>
     <string name="accessibility_autoclick_short_summary" msgid="4106953930081213514">"0,2 giây"</string>
-    <string name="accessibility_autoclick_medium_title" msgid="3134175117576834320">"Vừa"</string>
+    <string name="accessibility_autoclick_medium_title" msgid="3134175117576834320">"Trung bình"</string>
     <string name="accessibility_autoclick_medium_summary" msgid="1343390686514222871">"0,6 giây"</string>
     <string name="accessibility_autoclick_long_title" msgid="6799311820641687735">"Dài"</string>
     <string name="accessibility_autoclick_long_summary" msgid="3747153151313563637">"1 giây"</string>
@@ -2461,7 +2461,7 @@
     <string name="reduce_bright_colors_intensity_preference_title" msgid="7455443033955118267">"Cường độ"</string>
     <string name="reduce_bright_colors_intensity_start_label" msgid="930387498396426039">"Tối hơn"</string>
     <string name="reduce_bright_colors_intensity_end_label" msgid="1422600205484299860">"Sáng hơn"</string>
-    <string name="reduce_bright_colors_persist_preference_title" msgid="4368829654993343354">"Tiếp tục sau khi thiết bị khởi động lại"</string>
+    <string name="reduce_bright_colors_persist_preference_title" msgid="4368829654993343354">"Vẫn bật chế độ này sau khi thiết bị khởi động lại"</string>
     <plurals name="accessibilty_autoclick_preference_subtitle_short_delay" formatted="false" msgid="5354221071353645263">
       <item quantity="other">Ngắn (<xliff:g id="CLICK_DELAY_LABEL_1">%1$s</xliff:g> giây)</item>
       <item quantity="one">Ngắn (<xliff:g id="CLICK_DELAY_LABEL_0">%1$s</xliff:g> giây)</item>
@@ -2947,8 +2947,8 @@
     <string name="vpn_settings_single_insecure_multiple_total" msgid="6107225844641301139">"<xliff:g id="VPN_COUNT">%d</xliff:g> không an toàn"</string>
     <string name="vpn_settings_multiple_insecure_multiple_total" msgid="1706236062478680488">"<xliff:g id="VPN_COUNT">%d</xliff:g> không an toàn"</string>
     <string name="adaptive_connectivity_title" msgid="7464959640138428192">"Kết nối thích ứng"</string>
-    <string name="adaptive_connectivity_summary" msgid="3648731530666326885">"Tăng thời lượng pin và cải thiện hiệu suất thiết bị bằng cách tự động quản lý các kết nối mạng"</string>
-    <string name="adaptive_connectivity_switch_on" msgid="3653067561620745493">"Bật"</string>
+    <string name="adaptive_connectivity_summary" msgid="3648731530666326885">"Tự động quản lý các kết nối mạng để tăng thời lượng pin và cải thiện hiệu suất thiết bị"</string>
+    <string name="adaptive_connectivity_switch_on" msgid="3653067561620745493">"Đang bật"</string>
     <string name="adaptive_connectivity_switch_off" msgid="5076172560836115265">"Tắt"</string>
     <string name="credentials_title" msgid="7535942196886123656">"Vùng lưu trữ thông tin xác thực"</string>
     <string name="credentials_install" msgid="3933218407598415827">"Cài đặt chứng chỉ"</string>
